// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSplitButtonControl is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props compressed is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props disabled options are rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props empty value option is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props fullWidth is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiButton--fullWidth ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props isInvalid is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props isLoading is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props value option is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;
